--- a/docs/tex/1-wprowadzenie.tex
+++ b/docs/tex/1-wprowadzenie.tex
@@ -8,7 +8,7 @@ W ciągu ostatnich lat obserwujemy dynamiczny rozwój dużych modeli językowych
 Celem niniejszej pracy magisterskiej jest analiza możliwości zastosowania dużych modeli językowych (LLM) do automatycznego generowania konfiguracji typu Infrastructure as Code (IaC, infrastruktura jako kod) \cite{pahl_infrastructure_nodate}, ze szczególnym uwzględnieniem plików Dockerfile oraz manifestów Kubernetes.
 W ramach pracy zostanie przeprowadzona ocena jakości, poprawności i bezpieczeństwa generowanych konfiguracji, ze szczególnym uwzględnieniem zagrożeń wynikających z automatyzacji, takich jak podatności na ataki typu "prompt injection" czy manipulację zawartością repozytoriów. Finalnym celem jest zaprojektowanie oraz implementacja prototypowego systemu typu Platform as a Service (PaaS), który na podstawie kodu źródłowego repozytorium automatycznie generuje, buduje i wdraża aplikacje kontenerowe bez ingerencji człowieka.
 
-Praca ma charakter badawczo-prototypowy i obejmuje następujące zagadnienia:
+Praca ma charakter badawczo-rozwojowy i obejmuje następujące zagadnienia:
 \begin{itemize}
 \item przegląd aktualnego stanu wiedzy na temat wykorzystania LLM w generowaniu kodu i konfiguracji infrastruktury,
 \item identyfikację braków i zagrożeń związanych z automatyzacją generacji IaC, w tym problemów bezpieczeństwa i odporności na ataki (np. "prompt injection", manipulacja repozytorium),
